# lotrc

./: .gitignore  .gitmodules  Cargo.toml  Formats.md  README.md  __init__.py  audio.py  build.bat  level_info.py  setup.py  types.py  utils.py
examples/: chage_level_gamemode.py  conv_dlc.py  dump_gameobjs.py  dump_load_gameobjs.py  edit_text.py  full_character_move.py  full_charater_move.py  load_gameobjs.py  mesh_swap.py  update_gamemodemask.py
level/: __init__.py  bin.py  pak.py
level_alt/: __init__.py  pak.py
lotrc_rs_proc/: Cargo.toml
lotrc_rs_proc/src/: lib.rs
res/: conquest_strings.txt
src/: audio.rs  bin.rs  level.rs  level_alt.rs  level_info.rs  lua_stuff.rs  main.rs  pak.rs  pak_alt.rs  read_write.rs  types.rs
