workspace = { members = ["lotrc_rs_proc"] }
[package]
name = "lotrc_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.7", features = ["lua51", "vendored"] }
# flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
flate2 = "1.0.28"
log = "0.4.21"
zerocopy = { version = "0.7.32", features = ["byteorder", "derive"] }
lotrc_rs_proc = { path = "lotrc_rs_proc" }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rmp-serde = "1.2.0"
lazy_static = "1.4.0"
tempfile = "3.10.1"
serde_cbor = "0.11.2"
pretty_env_logger = "0.5.0"
crc32fast = "1.4.0"
bcndecode = "0.2.0"
serde_json = { version = "1.0", features = ["preserve_order"] }